# jv

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  ReleaseNotes.md  azure-pipelines.yml  changeversion  commit  configure.ac  jv.kdev4
.azure-pipelines/: continuous.yml  pr.yml  release.yml
.azure-pipelines/templates/: create-release.yml  linux.yml  linux_package.yml  osx.yml  osx_package.yml  windows.yml  windows_package.yml
ci/appimage/: com.projectaten.JournalViewer.appdata.xml  com.projectaten.JournalViewer.desktop
ci/osx/: dmgbuild-settings.py
ci/scripts/: list-releases  prep-appimage
ci/ubuntu/: Dockerfile
ci/windows/: Dockerfile  buildlocal.ps1  jv.iss
doc/: chapter.md
doc/01.introduction/: chapter.md
doc/02.code/: chapter.md
doc/03.operation/: chapter.md
doc/04.gui/: chapter.md
doc/05.plotting/: chapter.md
doc/06.reports/: chapter.md
doc/06.reports/01.quick/: chapter.md
doc/06.reports/02.experiment/: chapter.md
doc/07.cli/: chapter.md
doc/08.settings/: chapter.md
doc/08.settings/01.access/: chapter.md
doc/08.settings/02.export/: chapter.md
doc/09.userdata/: chapter.md
extra/: JournalViewer.desktop  JournalViewerLite.desktop  license.txt
extra/LEAP42.1/: README  jv.spec  jvlite.spec
extra/LEAP42.2/: README
extra/OSX/: jv.dmginfo  jvlite.dmginfo
extra/OpenSuSE13.2/: README  jv.spec  jvlite.spec
extra/SL7.2/: jv.spec  jvlite.spec
extra/Ubuntu14.04/: README
extra/Ubuntu14.04/jv/: changelog  control  copyright  rules
extra/Ubuntu14.04/jvlite/: README  control  rules
extra/Ubuntu16.04/: README
extra/Ubuntu16.04/jv/: control  rules
extra/Ubuntu16.04/jvlite/: changelog  control  rules
extra/Win32/: jv.iss  jvlite.iss
extra/appimage/jv/usr/share/applications/: com.projectaten.JournalViewer.desktop
extra/appimage/jvlite/usr/share/metainfo/: com.projectaten.JournalViewerLite.appdata.xml
extra/appimage/usr/share/applications/: com.projectaten.JournalViewerLite.desktop
src/: CMakeLists.txt  Makefile.am  array.h  data2d.cpp  data2d.h  datainterface.h  datainterface.ui  datainterface_funcs.cpp  document.cpp  document.h  documentcommands.cpp  documentcommands.h  enumeration.cpp  enumeration.h  findwindow.h  findwindow.ui  findwindow_funcs.cpp  icons.qrc  instrument.cpp  instrument.h  isis.cpp  isis.h  isis_data.cpp  journal.cpp  journal.h  jv.h  jv.ui  jv_cli.cpp  jv_funcs.cpp  jv_instrument.cpp  jv_local.cpp  jv_printing.cpp  jv_rundata.cpp  jv_settings.cpp  licensewindow.h  licensewindow.ui  licensewindow_funcs.cpp  list.h  logwindow.h  logwindow.ui  (+37 more)
src/get/: CMakeLists.txt  Makefile.am  geniedefs.h  getsect.c  interface.cpp  interface.h  interface_data.cpp  io.f
templates/: linux.yml  osx.yml  windows.yml
